tests/baselines/reference/MemberFunctionDeclaration8_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,9): error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,12): error TS1127: Invalid character.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,14): error TS1109: Expression expected.
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(4,16): error TS2552: Cannot find name 'bar'. Did you mean 'NaN'?
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts(5,12): error TS2552: Cannot find name 'bar'. Did you mean 'NaN'?


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration8_es6.ts (5 errors) ====
    class C {
      foo() {
        // Make sure we don't think of *bar as the start of a generator method.
        if (a) # * bar;
            ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
               
!!! error TS1127: Invalid character.
                 ~
!!! error TS1109: Expression expected.
                   ~~~
!!! error TS2552: Cannot find name 'bar'. Did you mean 'NaN'?
        return bar;
               ~~~
!!! error TS2552: Cannot find name 'bar'. Did you mean 'NaN'?
      }
    }